Adding query layer
