# backend/cpfcnpj-crud-api/command/domain/repository/document.go
@@ -1,0 +1,13 @@
+package repository
+
+import (
+	"zisluiz.com/cpfcnpj-crud-api/command/domain/exception"
+	"zisluiz.com/cpfcnpj-crud-api/command/domain/model"
+)
+
+type DocumentRepository interface {
+	Insert(document *model.Document) *exception.Validations
+	Update(document *model.Document) *exception.Validations
+	Get(uuid string) (*model.Document, *exception.Validations)
+	Delete(uuid string) *exception.Validations
+}
