# backend/cpfcnpj-crud-api/domain/command/model/document.go
@@ -1,11 +1,0 @@
-package model
-
-type Document struct {
-	Entity
-	Name     string
-	Identity Identity
-}
-
-func NewDocument(name string, identity Identity) *Document {
-	return &Document{Name: name, Identity: identity}
-}
